app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-service
spec:
  selector:
    app: wil
  ports:
  - protocol: TCP
    port: 8888
    targetPort: 8888
