app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-wil
    namespace: dev
spec:
  rules:
   - http:
       paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: wil-service
             port:
               number: 80
